--- a/src/ui/qgsfieldspropertiesbase.ui
+++ b/src/ui/qgsfieldspropertiesbase.ui
@@ -11,6 +11,51 @@
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_6">
+   <item row="0" column="3">
+    <widget class="QToolButton" name="mCalculateFieldButton">
+     <property name="toolTip">
+      <string>Field calculator</string>
+     </property>
+     <property name="whatsThis">
+      <string>Click to toggle table editing</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="4">
+    <spacer>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>100</width>
+       <height>19</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="2">
+    <widget class="QToolButton" name="mToggleEditingButton">
+     <property name="toolTip">
+      <string>Toggle editing mode</string>
+     </property>
+     <property name="whatsThis">
+      <string>Click to toggle table editing</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
     <widget class="QToolButton" name="mAddAttributeButton">
      <property name="sizePolicy">
@@ -51,62 +96,72 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="2">
-    <widget class="QToolButton" name="mToggleEditingButton">
-     <property name="toolTip">
-      <string>Toggle editing mode</string>
-     </property>
-     <property name="whatsThis">
-      <string>Click to toggle table editing</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="checkable">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="3">
-    <widget class="QToolButton" name="mCalculateFieldButton">
-     <property name="toolTip">
-      <string>Field calculator</string>
-     </property>
-     <property name="whatsThis">
-      <string>Click to toggle table editing</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="checkable">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="4">
-    <spacer>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>658</width>
-       <height>19</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="0" colspan="5">
-        <layout class="QHBoxLayout" name="horizontalLayout_15">
-         <item>
-          <widget class="QWidget" name="mAttributesListFrame"/>
-         </item>
-         <item>
-          <widget class="QWidget" name="widget" native="true">
-           <layout class="QGridLayout" name="gridLayout_18">
-            <property name="margin">
-             <number>0</number>
-            </property>
+   <item row="1" column="0" colspan="7">
+    <layout class="QHBoxLayout" name="horizontalLayout_15">
+     <item>
+      <widget class="QWidget" name="mAttributesListFrame" native="true"/>
+     </item>
+     <item>
+      <widget class="QWidget" name="widget" native="true">
+       <layout class="QGridLayout" name="gridLayout_18">
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item row="1" column="0" colspan="3">
+         <widget class="QStackedWidget" name="mAttributeEditorOptionsWidget">
+          <property name="currentIndex">
+           <number>0</number>
+          </property>
+          <widget class="QWidget" name="page">
+           <layout class="QGridLayout" name="gridLayout_2">
+            <item row="0" column="1">
+             <layout class="QHBoxLayout" name="horizontalLayout_2">
+              <item>
+               <widget class="QLineEdit" name="leEditForm"/>
+              </item>
+              <item>
+               <widget class="QToolButton" name="pbnSelectEditForm">
+                <property name="text">
+                 <string>...</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_3">
+              <property name="text">
+               <string>Init function</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QLineEdit" name="leEditFormInit"/>
+            </item>
+            <item row="0" column="0">
+             <widget class="QLabel" name="label">
+              <property name="text">
+               <string>Edit UI</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1">
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="page_2">
+           <layout class="QGridLayout" name="gridLayout">
             <item row="1" column="1">
              <widget class="QWidget" name="mAttributesTreeButtonFrame" native="true">
               <property name="sizePolicy">
@@ -117,26 +172,31 @@
               </property>
               <property name="maximumSize">
                <size>
-                <width>26</width>
+                <width>30</width>
                 <height>16777215</height>
                </size>
               </property>
-              <layout class="QGridLayout" name="gridLayout_19">
+              <layout class="QVBoxLayout" name="verticalLayout">
+               <property name="spacing">
+                <number>6</number>
+               </property>
                <property name="margin">
                 <number>0</number>
                </property>
-               <item row="5" column="0">
-                <widget class="QToolButton" name="mMoveDownItem">
-                 <property name="text">
-                  <string>v</string>
+               <item>
+                <spacer name="verticalSpacer_4">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
                  </property>
-                 <property name="icon">
-                  <iconset resource="../../images/images.qrc">
-                   <normaloff>:/images/themes/default/mActionArrowDown.png</normaloff>:/images/themes/default/mActionArrowDown.png</iconset>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>186</height>
+                  </size>
                  </property>
-                </widget>
+                </spacer>
                </item>
-               <item row="2" column="0">
+               <item>
                 <widget class="QToolButton" name="mAddTabOrGroupButton">
                  <property name="text">
                   <string>+</string>
@@ -147,20 +207,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="6" column="0">
-                <spacer name="verticalSpacer_3">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>40</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item row="1" column="0">
+               <item>
                 <widget class="QToolButton" name="mAddItemButton">
                  <property name="text">
                   <string>&gt;</string>
@@ -171,20 +218,18 @@
                  </property>
                 </widget>
                </item>
-               <item row="0" column="0">
-                <spacer name="verticalSpacer_4">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
+               <item>
+                <widget class="QToolButton" name="mMoveDownItem">
+                 <property name="text">
+                  <string>v</string>
                  </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>40</height>
-                  </size>
+                 <property name="icon">
+                  <iconset resource="../../images/images.qrc">
+                   <normaloff>:/images/themes/default/mActionArrowDown.png</normaloff>:/images/themes/default/mActionArrowDown.png</iconset>
                  </property>
-                </spacer>
+                </widget>
                </item>
-               <item row="4" column="0">
+               <item>
                 <widget class="QToolButton" name="mMoveUpItem">
                  <property name="text">
                   <string>^</string>
@@ -195,7 +240,7 @@
                  </property>
                 </widget>
                </item>
-               <item row="3" column="0">
+               <item>
                 <widget class="QToolButton" name="mRemoveTabGroupItemButton">
                  <property name="text">
                   <string>-</string>
@@ -206,10 +251,23 @@
                  </property>
                 </widget>
                </item>
+               <item>
+                <spacer name="verticalSpacer_3">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>5</width>
+                   <height>176</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
               </layout>
              </widget>
             </item>
-            <item row="1" column="2" colspan="2">
+            <item row="1" column="2">
              <widget class="QWidget" name="mAttributesTreeFrame" native="true">
               <property name="sizePolicy">
                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -217,33 +275,56 @@
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
-             </widget>
-            </item>
-            <item row="0" column="3">
-             <spacer name="horizontalSpacer_6">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item row="0" column="1" colspan="2">
-             <widget class="QCheckBox" name="mTabDisplayCheckbox">
-              <property name="text">
-               <string>Use tabs to dispay fields</string>
+              <property name="autoFillBackground">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
            </layout>
           </widget>
-         </item>
-        </layout>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="0" column="6">
+    <widget class="QComboBox" name="mEditorLayoutComboBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <item>
+      <property name="text">
+       <string>Autogenerate</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Drag and drop designer</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Provide ui-file</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="0" column="5">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Attribute editor layout:</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
+ <resources>
+  <include location="../../images/images.qrc"/>
+ </resources>
+ <connections/>
 </ui>
