--- a/src/ui/qgsvectorlayerpropertiesbase.ui
+++ b/src/ui/qgsvectorlayerpropertiesbase.ui
@@ -66,7 +66,7 @@
    <item row="1" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>4</number>
      </property>
      <property name="iconSize">
       <size>
@@ -298,7 +298,7 @@
             <x>0</x>
             <y>0</y>
             <width>914</width>
-            <height>746</height>
+            <height>728</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_3">
@@ -308,66 +308,28 @@
               <string>Options</string>
              </property>
              <layout class="QGridLayout" name="gridLayout_2">
-              <item row="0" column="0">
-               <widget class="QLabel" name="label">
-                <property name="text">
-                 <string>Edit UI</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1" colspan="2">
-               <layout class="QHBoxLayout" name="horizontalLayout_2">
-                <item>
-                 <widget class="QLineEdit" name="leEditForm"/>
-                </item>
-                <item>
-                 <widget class="QToolButton" name="pbnSelectEditForm">
-                  <property name="text">
-                   <string>...</string>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item row="0" column="3">
-               <widget class="QPushButton" name="pbnIndex">
-                <property name="text">
-                 <string>Create Spatial Index</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="3">
-               <widget class="QPushButton" name="pbnUpdateExtents">
-                <property name="text">
-                 <string>Update Extents</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="1" colspan="2">
-               <widget class="QLineEdit" name="leEditFormInit"/>
-              </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>Init function</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="label_4">
-                <property name="text">
-                 <string>CRS</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
+              <item row="0" column="2" colspan="3">
                <widget class="QLineEdit" name="leSpatialRefSys">
                 <property name="readOnly">
                  <bool>true</bool>
                 </property>
                </widget>
               </item>
-              <item row="2" column="3">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>CRS</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0" colspan="3">
+               <widget class="QPushButton" name="pbnIndex">
+                <property name="text">
+                 <string>Create Spatial Index</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="5">
                <widget class="QPushButton" name="pbnChangeSpatialRefSys">
                 <property name="toolTip">
                  <string>Specify the coordinate reference system of the layer's geometry.</string>
@@ -379,6 +341,26 @@
                  <string>Specify CRS</string>
                 </property>
                </widget>
+              </item>
+              <item row="2" column="3">
+               <widget class="QPushButton" name="pbnUpdateExtents">
+                <property name="text">
+                 <string>Update Extents</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="4">
+               <spacer name="horizontalSpacer_5">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
               </item>
              </layout>
             </widget>
@@ -410,10 +392,10 @@
                </widget>
               </item>
               <item row="0" column="1">
-               <widget class="QgsScaleComboBox" name="cbMinimumScale"/>
+               <widget class="QgsScaleComboBox" name="cbMinimumScale" native="true"/>
               </item>
               <item row="0" column="3">
-               <widget class="QgsScaleComboBox" name="cbMaximumScale"/>
+               <widget class="QgsScaleComboBox" name="cbMaximumScale" native="true"/>
               </item>
              </layout>
             </widget>
@@ -667,7 +649,7 @@
             <x>0</x>
             <y>0</y>
             <width>896</width>
-            <height>728</height>
+            <height>710</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
@@ -779,7 +761,7 @@
             <x>0</x>
             <y>0</y>
             <width>896</width>
-            <height>728</height>
+            <height>710</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_17">
@@ -872,8 +854,14 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QgsScaleComboBox</class>
+   <extends>QWidget</extends>
+   <header>qgsscalecombobox.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
-  <tabstop>pbnIndex</tabstop>
   <tabstop>cbMinimumScale</tabstop>
   <tabstop>cbMaximumScale</tabstop>
   <tabstop>txtSubsetSQL</tabstop>
